--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -2,12 +2,13 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="adomin.css">
+    <link rel="stylesheet" href="admin.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="csv.min.js"></script>
-    <script type="text/javascript" src="adomin.js"></script>
+    <script type="text/javascript" src="admin.js"></script>
     <script type="text/javascript" src="audio.js"></script>
+    <script type="text/javascript" src="admin.ws.js"></script>
     <title>adomin</title>
 </head>
 <body>
