--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -31,7 +31,7 @@
 <input type="button" value="答えの表示/非表示を切替える" onclick="changeDisplay2();"/><br><br>
 
     </form>
-    <h1 id="innerHTMLtxt"/></h1>
+    <h1 id="innerHTMLtxt"></h1>
     <button id="release">はやおし順番のリセット</button><br><br>
     <button type="button" id="left">前の問題</button>
     <button type="button" id="right">次の問題</button>
