admin add connection button

--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <form>
-    <h1>メインページ</h1>
+        <button type="button" id="conn">接続</button>
 
     <h1 id="__問題__">問題1</h1>
     <h2 id="__ジャンル__">J-POP</h2>
