--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -28,7 +28,7 @@
 
 
     <p id="__ヒント__" class="hidden">ヒント書く場所</p>
-    <input type="button" value="ヒントの表示/非表示を切替える" onclick="changeDisplay();"/><br><br>
+    <input type="button" value="ヒントの表示/非表示を切替える" onclick="changeDisplay1();"/><br><br>
 
     <p id="__答え__" class="hidden">回答書く場所</p>
     <input type="button" value="答えの表示/非表示を切替える" onclick="changeDisplay2();"/><br><br>
@@ -36,7 +36,9 @@
     </form>
     <h1 id="innerHTMLtxt"></h1>
     <button id="release">はやおし順番のリセット</button><br><br>
-    <button type="button" id="left">前の問題</button>
-    <button type="button" id="right">次の問題</button>
+    <div>
+        <button type="button" id="left">前の問題</button>
+        <button type="button" id="right">次の問題</button>
+    </div>
 </body>
 </html>
