change stop button and play button

--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -21,8 +21,8 @@
     <!-- 音楽ファイルの設定 -->
     <audio id="__音楽__" controls src="" loop></audio>
     <div>
-        <button type="button">Play</button>
-        <button type="button">Stop</button>
+        <button type="button" onclick="playMusic()">Play</button>
+        <button type="button" onclick="stopMusic()">Stop</button>
     </div>
 
 
