--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -40,5 +40,10 @@
         <button type="button" id="left">前の問題</button>
         <button type="button" id="right">次の問題</button>
     </div>
+    <select name="select csv" id="csv">
+        <option value="1">komatsu.csv</option>
+        <option value="2">quiz.csv</option>
+    </select>
+    <button type="button" id="done">決定</button>
 </body>
 </html>
