--- a/host/maind/main.html
+++ b/host/maind/main.html
@@ -37,3 +37,5 @@
     <p id="innerHTMLtxt"></p>
   </body>
 </html>
+git config --global user.email "c121088@e.koeki-u.ac.jp"
+git config --global user.name "C1210887"
