--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="admin.js"></script>
     <script type="text/javascript" src="audio.js"></script>
     <script type="text/javascript" src="admin.ws.js"></script>
-    <title>adomin</title>
+    <title>admin</title>
 </head>
 <body>
     <form>
