--- a/host/maind/main.html
+++ b/host/maind/main.html
@@ -35,5 +35,6 @@
 
       <button type="button" id="btn">はやおしボタン</button><br>
     <p id="innerHTMLtxt"></p>
+    <p id="member"></p>
   </body>
 </html>
