カンマ区切りの文字を配列に変換した

--- a/plusPointTemplate/index.html
+++ b/plusPointTemplate/index.html
@@ -18,6 +18,6 @@
   <p>5班<span id="team5"></span></p>
   <p>6班<span id="team6"></span></p>
 
-  <script src="index.js"></script>
+  <script src="index2.js"></script>
 </body>
 </html>
