--- a/host/admind/admin.html
+++ b/host/admind/admin.html
@@ -33,7 +33,7 @@
 
     </form>
     <h1 id="innerHTMLtxt"></h1>
-    <button id="release">はやおし順番のリセット</button><br><br>
+    <button type="button" id="release">はやおし順番のリセット</button><br><br>
     <div>
         <button type="button" id="left">前の問題</button>
         <button type="button" id="right">次の問題</button>
