--- a/host/maind/main.html
+++ b/host/maind/main.html
@@ -35,6 +35,6 @@
       <button type="button" id="btn">はやおしボタン</button><br>
     <p id="innerHTMLtxt"></p>
     <p id="member"></p>
-    <button type="button" id="reload" onClick="reload()">ソース</button>
+    <button type="button" id="reload" onClick="reload()">強制リロード</button>
   </body>
 </html>
